Ft integrating travis #168438532 (#51)
* ch(Server): Integrating travis and coveralls

* ch(Server): Integrating travis and coveralls

* ch(Server): Integrating travis and coveralls

* ch(db)Add travis yml

* ch(db):correct travis.yml file

* ch(db):correct travis.yml file

* ch(db) Correct error in creating dummy database for Travis

* ch(db) Correct error in creating dummy database for Travis

* ch(db): include correct credentials in .yml

* ch(db): correcting on mentor test

* ch(db): removing comments
