# server/controllers/userAuthController.js
@@ -4,7 +4,10 @@ import Db from '../db';
 const userAuthController = {
   createUser: async (req, res) => {
     const results = await new Db().addUser(req.body)
-    return Helper.handleSuccess(res, 201, 'User created successfully', results);
+    const {0: user} = results
+    const token = Helper.generateToken(user);
+    const data = {message: 'User created successfully', token: token}
+    return Helper.handleSuccess(res, 201, 'User created successfully', data);
   },
   loginUser: async (req, res) => {
     const result = await new Db().loginUser(req.body)
@@ -26,6 +29,9 @@ const userAuthController = {
   getUsers: async (req, res) => {
     if (req.userData.role === 'admin') {
       const results = await new Db().findAll('users');
+      results.forEach(mentor => {
+        delete mentor.password
+      });
       return Helper.handleSuccess(res, 200, `All Users Fetched`, results);
     }
     return Helper.handleError(res, 401, 'Insufficient provilege. Please sign in');
